--- a/src/bePatientRegistration.Api/Properties/launchSettings.json
+++ b/src/bePatientRegistration.Api/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7153;http://localhost:5234",
+      //"applicationUrl": "https://localhost:7153;http://localhost:5234",
+      "applicationUrl": "http://localhost:5234",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
