--- a/src/bePatientRegistration.Infrastructure/bePatientRegistration.Infrastructure.csproj
+++ b/src/bePatientRegistration.Infrastructure/bePatientRegistration.Infrastructure.csproj
@@ -19,6 +19,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\Migrations\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
