--- a/tests/bePatientRegistration.UnitTests/bePatientRegistration.UnitTests.csproj
+++ b/tests/bePatientRegistration.UnitTests/bePatientRegistration.UnitTests.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.5" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
@@ -22,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\bePatientRegistration.Application\bePatientRegistration.Application.csproj" />
     <ProjectReference Include="..\..\src\bePatientRegistration.Domain\bePatientRegistration.Domain.csproj" />
+    <ProjectReference Include="..\..\src\bePatientRegistration.Infrastructure\bePatientRegistration.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
